[gd_scene load_steps=6 format=3 uid="uid://y8hjpd61jmrf"]

[ext_resource type="Texture2D" uid="uid://bidc542gmfv6j" path="res://Images/Weapons/Basic/Basic_1.png" id="1_hcgfq"]
[ext_resource type="Script" path="res://basic_gun.gd" id="1_kaqui"]
[ext_resource type="Texture2D" uid="uid://di6o3hjnnk87y" path="res://Images/Weapons/Basic/Basic_2.png" id="2_b6xs5"]
[ext_resource type="Texture2D" uid="uid://k0pj6g1e45ek" path="res://Images/Weapons/Basic/Basic_3.png" id="3_o0mxc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0drdx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hcgfq")
}],
"loop": true,
"name": &"chillin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b6xs5")
}, {
"duration": 1.0,
"texture": ExtResource("3_o0mxc")
}, {
"duration": 1.0,
"texture": ExtResource("1_hcgfq")
}],
"loop": true,
"name": &"firin",
"speed": 5.0
}]

[node name="Basic_Gun" type="Node2D"]
script = ExtResource("1_kaqui")

[node name="Gun_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 38)
sprite_frames = SubResource("SpriteFrames_0drdx")
animation = &"firin"

[node name="ShotTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
